--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,28 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node / Next.js
+node_modules/
+.next/
+out/
+*.log
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# OS / système
 .DS_Store
-*.pem
+Thumbs.db
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# IDE / Trea / cache
+.cache/
+.cache/code-nautilus/
+.idea/
+*.vscode/
+*.sublime-workspace
+*.sublime-project
 
-# env files (can opt-in for committing if needed)
-.env*
+# Base de données locales / fichiers temporaires
+*.sqlite
+*.db
+*.env
+.env.local
+.env.*.local
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Build / output
+dist/
+build/
